--- a/less/post-page-styles.less
+++ b/less/post-page-styles.less
@@ -3,6 +3,7 @@
 // --------------------------------------------
 
 .post-header,
+.page-header,
 .entry-content,
 .post-footer,
 article.story {
@@ -10,6 +11,7 @@ article.story {
   margin-bottom:@baseline;
 }
 .post-header,
+.page-header,
 article.story {
   border-bottom: 1px solid @grayLighter;
 }
@@ -26,7 +28,7 @@ article.story {
   margin: 0 0 @baseline;
   list-style: none;
   font-family: @sansFontFamily;
-  font-size: @baseFontSize * 0.815;
+  font-size: @baseFontSize;
   line-height: 1.6;
 }
 .tags {
@@ -38,6 +40,7 @@ article.story {
   ul {
     padding:0;
     margin:0;
+    font-size: @baseFontSize;
 	li {
 	  display:inline;
 	  margin-right:10px;
@@ -80,7 +83,6 @@ article.story {
 .pager {
   margin: 0 0 @baseline;
   list-style: none;
-  font-size: @baseFontSize * 0.815;
   text-align: center;
   .clearfix();
 
